Добавила разметку index.html для мобильной версии

--- a/index.html
+++ b/index.html
@@ -1,12 +1,176 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
-  </head>
-  <body>
+</head>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Продвинутый HTML и CSS</a>».</p>
+<body>
 
-  </body>
+   
+    <div class="page-header">
+
+        <div class="main-menu main-menu--opened">
+
+            <a class="logo">
+            </a>
+
+            <a class="main-menu__btn">
+            </a>
+
+            <ul class="main-menu-items">
+                <li class="main-menu__item"><a href="#">Главная</a></li>
+                <li class="main-menu__item"><a href="#">Фотографии</a></li>
+                <li class="main-menu__item"><a href="#">Конкурс</a></li>
+                <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
+            </ul>
+
+        </div>
+
+        <div class="main-menu main-menu--closed">
+
+            <a class="logo">
+            </a>
+
+            <a class="main-menu__btn">
+            </a>
+
+        </div>
+
+        <section class="downloads">
+
+            <a class="downloads__btn" href="#">Скачать приложение</a>
+
+            <ul class="downloads-icons">
+                <li class="downloads__icon downloads__icon--apple"><a href="#">Apple</a></li>
+                <li class="downloads__icon downloads__icon--android"><a href="#">Android</a></li>
+                <li class="downloads__icon downloads__icon--win"><a href="#">Windows</a></li>
+            </ul>
+
+            <p class="downloads__info">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+
+        </section>
+
+    </div>
+
+
+    <section class="features">
+
+        <div class="features-header">
+            <h2 class="features-header__item">Устали от серости мегаполиса?</h2>
+            <h2 class="features-header__item">Нам есть, что вам предложить!</h2>
+        </div>
+
+        <article class="features__item">
+            <h3 class="features__item-header">Поднимает настроение</h3>
+            <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+        </article>
+
+        <article class="features__item">
+            <h3 class="features__item-header">Меняет мир вокруг</h3>
+            <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+        </article>
+
+        <article class="features__item">
+            <h3 class="features__item-header">Заводит новых друзей</h3>
+            <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+        </article>
+
+
+    </section>
+
+
+    <section class="reviews">
+        <div class="slider">
+
+            <article class="reviews-item">
+                <h3 class="reviews-item__author">Николай Петров</h3>
+                <div class="reviews-item__content">
+                    <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+                </div>
+            </article>
+
+            <article class="reviews-item">
+                <h3 class="reviews-item__author"></h3>
+                <div class="reviews-item__content">
+                    <p></p>
+                </div>
+            </article>
+
+            <article class="reviews-item">
+                <h3 class="reviews-item__author"></h3>
+                <div class="reviews-item__content">
+                    <p></p>
+                </div>
+            </article>
+        </div>
+
+        <ul class="pagination-dots" style="display:none">
+            <li class="pagination-dots__item"></li>
+            <li class="pagination-dots__item"></li>
+            <li class="pagination-dots__item"></li>
+        </ul>
+
+    </section>
+
+
+    <section class="price">
+
+        <table class="price-table">
+            <tr>
+                <th>
+                    <div class="price-table__tariff-name">Стандарт</div>
+                    <div class="price-table__tariff-value">3,99 USD</div>
+                </th>
+            </tr>
+            <tr>
+                <td>Розовый фильтр<span class="pirce-table__option-yes"> - есть</span></td>
+            </tr>
+            <tr>
+                <td>Смайлики<span class="pirce-table__option-yes"> - есть</span></td>
+            </tr>
+            <tr>
+                <td>Комментарии<span class="pirce-table__option-no"> - нет</span></td>
+            </tr>
+        </table>
+
+        <ul class="pagination-dots" style="display:none">
+            <li class="pagination-dots__item"></li>
+            <li class="pagination-dots__item"></li>
+            <li class="pagination-dots__item"></li>
+        </ul>
+
+    </section>
+
+
+    <section class="contacts">
+
+        <div class="contacts__header">
+            <h2>Остались вопросы? Свяжитесь с нами!</h2>
+        </div>
+
+        <article class="contacts__item contacts__item--phone">
+            <h3 class="contacts__item-header">Звоните:</h3>
+            <p class="contacts__item-content">+7 (812) 555-66-66</p>
+        </article>
+
+        <article class="contacts__item contacts__item--email">
+            <h3 class="contacts__item-header">Пишите:</h3>
+            <p class="contacts__item-content">mail@htmlacademy.ru</p>
+        </article>
+
+        <article class="contacts__item contacts__item--address">
+            <h3 class="contacts__item-header">Приезжайте в гости:</h3>
+            <p class="contacts__item-content">ул. Большая Конюшенная, 19/8</p>
+        </article>
+
+    </section>
+
+    <div class="map">
+    </div>
+
+
+</body>
+
 </html>
