--- a/index.html
+++ b/index.html
@@ -2,174 +2,217 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Пинк</title>
+  <meta charset="utf-8">
+  <title>HTML Academy: Пинк</title>
 </head>
 
 <body>
 
-   
-    <div class="page-header">
+  <header class="page-header">
 
-        <div class="main-menu main-menu--opened">
+    <nav class="main-menu main-menu--opened">
 
-            <a class="logo">
-            </a>
+      <h1>
+        <a class="logo">
+        PINK
+        </a>
+      </h1>
 
-            <a class="main-menu__btn">
-            </a>
+      <button class="main-menu__btn">
+      </button>
 
-            <ul class="main-menu-items">
-                <li class="main-menu__item"><a href="#">Главная</a></li>
-                <li class="main-menu__item"><a href="#">Фотографии</a></li>
-                <li class="main-menu__item"><a href="#">Конкурс</a></li>
-                <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
-            </ul>
+      <ul class="main-menu__items">
+        <li class="main-menu__item"><a href="#">Главная</a></li>
+        <li class="main-menu__item"><a href="#">Фотографии</a></li>
+        <li class="main-menu__item"><a href="#">Конкурс</a></li>
+        <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
+      </ul>
 
-        </div>
+    </nav>
 
-        <div class="main-menu main-menu--closed">
+    <nav class="main-menu main-menu--closed">
 
-            <a class="logo">
-            </a>
+      <h1>
+        <a class="logo">
+          PINK
+        </a>
+      </h1>
 
-            <a class="main-menu__btn">
-            </a>
+      <button class="main-menu__btn">
+      </button>
 
-        </div>
+    </nav>
 
-        <section class="downloads">
+    <div class="downloads">
 
-            <a class="downloads__btn" href="#">Скачать приложение</a>
+      <a class="downloads__btn" href="#">Скачать приложение</a>
 
-            <ul class="downloads-icons">
-                <li class="downloads__icon downloads__icon--apple"><a href="#">Apple</a></li>
-                <li class="downloads__icon downloads__icon--android"><a href="#">Android</a></li>
-                <li class="downloads__icon downloads__icon--win"><a href="#">Windows</a></li>
-            </ul>
+      <ul class="downloads__icons">
+        <li class="downloads__icon downloads__icon--apple"><a href="#">Apple</a></li>
+        <li class="downloads__icon downloads__icon--android"><a href="#">Android</a></li>
+        <li class="downloads__icon downloads__icon--win"><a href="#">Windows</a></li>
+      </ul>
 
-            <p class="downloads__info">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-
-        </section>
+      <p class="downloads__info">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
 
     </div>
 
+  </header>
+
+
+  <main>
 
     <section class="features">
 
-        <div class="features-header">
-            <h2 class="features-header__item">Устали от серости мегаполиса?</h2>
-            <h2 class="features-header__item">Нам есть, что вам предложить!</h2>
-        </div>
+      <h2 class="features__title">Устали от серости мегаполиса? Нам есть, что вам предложить!</h2>
 
-        <article class="features__item">
-            <h3 class="features__item-header">Поднимает настроение</h3>
-            <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
-        </article>
+      <ul class="features__items">
 
-        <article class="features__item">
-            <h3 class="features__item-header">Меняет мир вокруг</h3>
-            <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
-        </article>
+        <li class="features__item">
+          <h3 class="features__item-header">Поднимает настроение</h3>
+          <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+        </li>
 
-        <article class="features__item">
-            <h3 class="features__item-header">Заводит новых друзей</h3>
-            <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
-        </article>
+        <li class="features__item">
+          <h3 class="features__item-header">Меняет мир вокруг</h3>
+          <p>Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+        </li>
 
+        <li class="features__item">
+          <h3 class="features__item-header">Заводит новых друзей</h3>
+          <p>Ставьте лайки, комментируте, делитесь фотографиями с друзьями и заводите новых</p>
+        </li>
+
+      </ul>
 
     </section>
 
 
     <section class="reviews">
-        <div class="slider">
 
-            <article class="reviews-item">
-                <h3 class="reviews-item__author">Николай Петров</h3>
-                <div class="reviews-item__content">
-                    <p>«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-                </div>
-            </article>
+      <div class="slider">
 
-            <article class="reviews-item">
-                <h3 class="reviews-item__author"></h3>
-                <div class="reviews-item__content">
-                    <p></p>
-                </div>
-            </article>
+        <input type="radio" name="reviews-toggle" id="reviews-btn-1">
+        <input type="radio" name="reviews-toggle" id="reviews-btn-2">
+        <input type="radio" name="reviews-toggle" id="reviews-btn-3">
 
-            <article class="reviews-item">
-                <h3 class="reviews-item__author"></h3>
-                <div class="reviews-item__content">
-                    <p></p>
-                </div>
-            </article>
+        <ul class="slider__controls">
+          <li class="slider__controls-item"></li>
+          <li class="slider__controls-item"></li>
+          <li class="slider__controls-item"></li>
+        </ul>
+
+        <div class="slider__inner">
+
+          <ul class="reviews__items">
+
+            <li class="reviews__item">
+              <h3 class="reviews__item-author">Николай Петров</h3>
+              <div class="reviews__item-content">
+                «Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»
+              </div>
+            </li>
+
+            <li class="reviews__item">
+              <h3 class="reviews__item-author"></h3>
+              <div class="reviews__item-content"></div>
+            </li>
+
+            <li class="reviews__item">
+              <h3 class="reviews__item-author"></h3>
+              <div class="reviews__item-content"></div>
+            </li>
+
+          </ul>
+
         </div>
 
-        <ul class="pagination-dots" style="display:none">
-            <li class="pagination-dots__item"></li>
-            <li class="pagination-dots__item"></li>
-            <li class="pagination-dots__item"></li>
-        </ul>
+      </div>
 
     </section>
 
 
     <section class="price">
 
-        <table class="price-table">
-            <tr>
-                <th>
-                    <div class="price-table__tariff-name">Стандарт</div>
-                    <div class="price-table__tariff-value">3,99 USD</div>
-                </th>
-            </tr>
-            <tr>
-                <td>Розовый фильтр<span class="pirce-table__option-yes"> - есть</span></td>
-            </tr>
-            <tr>
-                <td>Смайлики<span class="pirce-table__option-yes"> - есть</span></td>
-            </tr>
-            <tr>
-                <td>Комментарии<span class="pirce-table__option-no"> - нет</span></td>
-            </tr>
-        </table>
+      <div class="slider">
 
-        <ul class="pagination-dots" style="display:none">
-            <li class="pagination-dots__item"></li>
-            <li class="pagination-dots__item"></li>
-            <li class="pagination-dots__item"></li>
+        <input type="radio" name="price-toggle" id="price-btn-1">
+        <input type="radio" name="price-toggle" id="price-btn-2">
+        <input type="radio" name="price-toggle" id="price-btn-3">
+
+        <ul class="slider__controls">
+          <li class="slider__controls-item"></li>
+          <li class="slider__controls-item"></li>
+          <li class="slider__controls-item"></li>
         </ul>
+
+        <div class="slider__inner">
+
+          <table class="price-table">
+
+            <tr>
+              <th>
+                <div class="price-table__tariff-name">Стандарт</div>
+                <div class="price-table__tariff-value">3,99 USD</div>
+              </th>
+            </tr>
+
+            <tr>
+              <td>Розовый фильтр<span class="price-table__option price-table__option--yes"> - есть</span></td>
+            </tr>
+
+            <tr>
+              <td>Смайлики<span class="price-table__option price-table__option--yes"> - есть</span></td>
+            </tr>
+
+            <tr>
+              <td>Комментарии<span class="price-table__option price-table__option--no"> - нет</span></td>
+            </tr>
+
+          </table>
+
+        </div>
+
+      </div>
 
     </section>
 
+  </main>
+
+
+  <footer class="page-footer">
 
     <section class="contacts">
 
-        <div class="contacts__header">
-            <h2>Остались вопросы? Свяжитесь с нами!</h2>
-        </div>
+      <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
 
-        <article class="contacts__item contacts__item--phone">
-            <h3 class="contacts__item-header">Звоните:</h3>
-            <p class="contacts__item-content">+7 (812) 555-66-66</p>
-        </article>
+      <ul class="contacts__items">
 
-        <article class="contacts__item contacts__item--email">
-            <h3 class="contacts__item-header">Пишите:</h3>
-            <p class="contacts__item-content">mail@htmlacademy.ru</p>
-        </article>
+        <li class="contacts__item contacts__item--phone">
+          <h3 class="contacts__item-title">Звоните:</h3>
+          <div class="contacts__item-content">+7 (812) 555-66-66</div>
+        </li>
 
-        <article class="contacts__item contacts__item--address">
-            <h3 class="contacts__item-header">Приезжайте в гости:</h3>
-            <p class="contacts__item-content">ул. Большая Конюшенная, 19/8</p>
-        </article>
+        <li class="contacts__item contacts__item--email">
+          <h3 class="contacts__item-title">Пишите:</h3>
+          <div class="contacts__item-content">mail@htmlacademy.ru</div>
+        </li>
+
+        <li class="contacts__item contacts__item--address">
+          <h3 class="contacts__item-title">Приезжайте в гости:</h3>
+          <div class="contacts__item-content">ул. Большая Конюшенная, 19/8</div>
+        </li>
+
+      </ul>
+
+      <div class="map" id="yandex-map">
+      </div>
 
     </section>
 
-    <div class="map">
-    </div>
+  </footer>
 
+  <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=MMsR6g0CCF-m6xpOlU9ElIa7qg4eUTRG&width=100%&height=240&id=yandex-map&lang=ru_RU&sourceType=constructor&scroll=true"></script>
 
 </body>
 
