Разметка photo.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo">
+        <a class="logo"  href="#">
         PINK
         </a>
       </h1>
