Разметка form.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="main-menu main-menu--closed">
 
       <h1>
-        <a class="logo">
+        <a class="logo" href="#">
           PINK
         </a>
       </h1>
