--- a/photo.html
+++ b/photo.html
@@ -57,7 +57,7 @@
    </h3>
 
 
-      <article class="user-photos__post">
+      <article class="user-photos__post user-post">
 
         <img class="user-post__photo user-post__photo--best" src="http://placehold.it/320x132" alt="Фотография пользователя">
 
@@ -80,7 +80,7 @@
       </article>
 
 
-      <article class="user-photos__post">
+      <article class="user-photos__post user-post">
 
         <img class="user-post__photo" src="http://placehold.it/280x132" alt="Фотография пользователя">
 
@@ -103,7 +103,7 @@
       </article>
 
 
-      <article class="user-photos__post">
+      <article class="user-photos__post user-post">
 
         <img class="user-post__photo" src="http://placehold.it/280x132" alt="Фотография пользователя">
 
@@ -126,7 +126,7 @@
       </article>
 
 
-      <article class="user-photos__post">
+      <article class="user-photos__post user-post">
 
         <img class="user-post__photo" src="http://placehold.it/280x132" alt="Фотография пользователя">
 
@@ -149,7 +149,7 @@
       </article>
 
 
-      <article class="user-photos__post">
+      <article class="user-photos__post user-post">
 
         <img class="user-post__photo" src="http://placehold.it/280x132" alt="Фотография пользователя">
 
@@ -172,7 +172,7 @@
       </article>
 
 
-      <article class="user-photos__post">
+      <article class="user-photos__post user-post">
 
         <img class="user-post__photo" src="http://placehold.it/280x132" alt="Фотография пользователя">
 
@@ -211,7 +211,7 @@
         <button class="new-photo__btn-color"></button>
         <button class="new-photo__btn-brt"></button>
 
-        <div class="new-photo__control"> </div>
+        <input class="new-photo__control" type="range">
 
       </div>
 
@@ -243,7 +243,7 @@
 
     <div class="credentials">
       Разработано
-      <a class="credentials__by-img" href=""><img src="http://placehold.it/27x34" alt="htmlacademy"> </a>
+      <a class="credentials__logo" href=""><img src="http://placehold.it/27x34" alt="htmlacademy"> </a>
     </div>
 
   </footer>
