--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </button>
 
       <ul class="main-menu__items">
-        <li class="main-menu__item"><a href="#">Главная</a></li>
-        <li class="main-menu__item"><a href="#">Фотографии</a></li>
-        <li class="main-menu__item"><a href="#">Конкурс</a></li>
+        <li class="main-menu__item"><a href="index.html">Главная</a></li>
+        <li class="main-menu__item"><a href="photo.html">Фотографии</a></li>
+        <li class="main-menu__item"><a href="form.html">Конкурс</a></li>
         <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
       </ul>
 
