--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo" href="#">
+        <a class="logo" href="index.html">
         PINK
         </a>
       </h1>
@@ -22,9 +22,9 @@
       </button>
 
       <ul class="main-menu__items">
-        <li class="main-menu__item"><a href="#">Главная</a></li>
-        <li class="main-menu__item"><a href="#">Фотографии</a></li>
-        <li class="main-menu__item"><a href="#">Конкурс</a></li>
+        <li class="main-menu__item"><a href="index.html">Главная</a></li>
+        <li class="main-menu__item"><a href="photo.html">Фотографии</a></li>
+        <li class="main-menu__item"><a href="form.html">Конкурс</a></li>
         <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
       </ul>
 
@@ -33,7 +33,7 @@
     <nav class="main-menu main-menu--closed">
 
       <h1>
-        <a class="logo">
+        <a class="logo" href="index.html">
           PINK
         </a>
       </h1>
