--- a/photo.html
+++ b/photo.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo" href="index.html">
+        <a class="logo logo--plain" href="index.html">
         PINK
         </a>
       </h1>
@@ -33,7 +33,7 @@
     <nav class="main-menu main-menu--closed">
 
       <h1>
-        <a class="logo" href="index.html">
+        <a class="logo logo--plain" href="index.html">
           PINK
         </a>
       </h1>
@@ -227,7 +227,7 @@
 
   <footer class="page-footer">
 
-    <a class="logo" href="">PINK</a>
+    <a class="logo logo--pict" href="">PINK</a>
 
     <ul class="socials">
       <li class="socials__item socials__item--twitter">
