--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo"  href="index.html">
+        <a class="logo logo--plain"  href="index.html">
         PINK
         </a>
       </h1>
@@ -33,7 +33,7 @@
     <nav class="main-menu main-menu--closed">
 
       <h1>
-        <a class="logo" href="index.html">
+        <a class="logo logo--plain" href="index.html">
           PINK
         </a>
       </h1>
@@ -55,59 +55,23 @@
       <div class="contest__slogan page-slogan">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! </div>
 
 
-      <fieldset class="contest__user-info">
+      <fieldset class="contest__userinfo userinfo-contest">
 
-        <ul class="contest__user-info-list">
+        <ul class="userinfo-contest__list">
 
-          <li class="contest__user-info-item">
-            <label class="contest__lbl-text" for="user-sec-name">Фамилия</label>
-            <input class="contest__input-text" type="text" name="user-sec-name" id="user-sec-name" placeholder="Укажите фамилию">
+          <li class="userinfo-contest__item">
+            <label class="userinfo-contest__lbl" for="user-sec-name">Фамилия</label>
+            <input class="userinfo-contest__input" type="text" name="user-sec-name" id="user-sec-name" placeholder="Укажите фамилию">
           </li>
 
-          <li class="contest__user-info-item">
-            <label class="contest__lbl-text" for="user-name">Имя</label>
-            <input class="contest__input-text" type="text" name="user-name" id="user-name" placeholder="Введите ваше имя">
+          <li class="userinfo-contest__item">
+            <label class="userinfo-contest__lbl" for="user-name">Имя</label>
+            <input class="userinfo-contest__input" type="text" name="user-name" id="user-name" placeholder="Введите ваше имя">
           </li>
 
-          <li class="contest__user-info-item">
-            <label class="contest__lbl-text" for="user-patronymic">Отчество</label>
-            <input class="contest__input-text" type="text" name="user-patronymic" id="user-patronymic" placeholder="Ну и отчество тоже">
-          </li>
-
-        </ul>
-
-      </fieldset>
-
-
-      <fieldset class="contest__achieve">
-
-        <legend class="contest__list-title">Ваши безбашенные достижения в путешествии</legend>
-
-        <ul class="contest__achieve-list">
-
-          <li class="contest__achieve-item">
-            <input class="contest__input-checkbox" type="checkbox" name="shark" id="shark">
-            <label class="contest__lbl-checkbox" for="shark">Сделал селфи с акулой</label>
-          </li>
-          <li class="contest__achieve-item">
-            <input class="contest__input-checkbox" type="checkbox" name="sun-burn" id="sun-burn">
-            <label class="contest__lbl-checkbox" for="sun-burn">Обгорел на пляже</label>
-          </li>
-          <li class="contest__achieve-item">
-            <input class="contest__input-checkbox" type="checkbox" name="chuck" id="chuck">
-            <label class="contest__lbl-checkbox" for="chuck">Видел Чака Норриса</label>
-          </li>
-          <li class="contest__achieve-item">
-            <input class="contest__input-checkbox" type="checkbox" name="souvenir" id="souvenir">
-            <label class="contest__lbl-checkbox" for="souvenir">Накупил сувениров</label>
-          </li>
-          <li class="contest__achieve-item">
-            <input class="contest__input-checkbox" type="checkbox" name="tower" id="tower">
-            <label class="contest__lbl-checkbox" for="tower">Удержал башню</label>
-          </li>
-          <li class="contest__achieve-item">
-            <input class="contest__input-checkbox" type="checkbox" name="hotel" id="hotel">
-            <label class="contest__lbl-checkbox" for="hotel">Разгромил отель</label>
+          <li class="userinfo-contest__item">
+            <label class="userinfo-contest__lbl" for="user-patronymic">Отчество</label>
+            <input class="userinfo-contest__input" type="text" name="user-patronymic" id="user-patronymic" placeholder="Ну и отчество тоже">
           </li>
 
         </ul>
@@ -115,18 +79,35 @@
       </fieldset>
 
 
-      <fieldset class="contest__user-info">
+      <fieldset class="contest__achieve achieve-contest">
 
-        <ul class="contest__user-info-list">
+        <legend class="achieve-contest__title">Ваши безбашенные достижения в путешествии</legend>
 
-          <li class="contest__user-info-item">
-            <label class="contest__lbl-text" for="user-phone">Номерок телефончика</label>
-            <input class="contest__input-text" type="tel" pattern="([0-9]-?)*" name="user-phone" id="user-phone" placeholder="Номер, пожалуйста">
+        <ul class="achieve-contest__list">
+
+          <li class="achieve-contest__item">
+            <input class="achieve-contest__input" type="checkbox" name="shark" id="shark">
+            <label class="achieve-contest__lbl" for="shark">Сделал селфи с акулой</label>
           </li>
-
-          <li class="contest__user-info-item">
-            <label class="contest__lbl-text" for="user-email">Адресок почты</label>
-            <input class="contest__input-text" type="email" name="user-email" id="user-email" placeholder="E-mail, пожалуйста">
+          <li class="achieve-contest__item">
+            <input class="achieve-contest__input" type="checkbox" name="sun-burn" id="sun-burn">
+            <label class="achieve-contest__lbl" for="sun-burn">Обгорел на пляже</label>
+          </li>
+          <li class="achieve-contest__item">
+            <input class="achieve-contest__input" type="checkbox" name="chuck" id="chuck">
+            <label class="achieve-contest__lbl" for="chuck">Видел Чака Норриса</label>
+          </li>
+          <li class="achieve-contest__item">
+            <input class="achieve-contest__input" type="checkbox" name="souvenir" id="souvenir">
+            <label class="achieve-contest__lbl" for="souvenir">Накупил сувениров</label>
+          </li>
+          <li class="achieve-contest__item">
+            <input class="achieve-contest__input" type="checkbox" name="tower" id="tower">
+            <label class="achieve-contest__lbl" for="tower">Удержал башню</label>
+          </li>
+          <li class="achieve-contest__item">
+            <input class="achieve-contest__input" type="checkbox" name="hotel" id="hotel">
+            <label class="achieve-contest__lbl" for="hotel">Разгромил отель</label>
           </li>
 
         </ul>
@@ -134,26 +115,45 @@
       </fieldset>
 
 
-      <fieldset class="contest__app">
+      <fieldset class="contest__userinfo userinfo-contest">
 
-        <legend class="contest__list-title">С каким приложением путешествовали?
+        <ul class="userinfo-contest__list">
+
+          <li class="userinfo-contest__item">
+            <label class="userinfo-contest__lbl" for="user-phone">Номерок телефончика</label>
+            <input class="userinfo-contest__input" type="tel" pattern="([0-9]-?)*" name="user-phone" id="user-phone" placeholder="Номер, пожалуйста">
+          </li>
+
+          <li class="userinfo-contest__item">
+            <label class="userinfo-contest__lbl" for="user-email">Адресок почты</label>
+            <input class="userinfo-contest__input" type="email" name="user-email" id="user-email" placeholder="E-mail, пожалуйста">
+          </li>
+
+        </ul>
+
+      </fieldset>
+
+
+      <fieldset class="contest__app app-contest">
+
+        <legend class="app-contest__title">С каким приложением путешествовали?
         </legend>
 
-        <ul class="contest__app-list">
+        <ul class="app-contest__list">
 
-          <li class="contest__app-item">
-            <input class="contest__input-radio" type="radio" name="app" id="ios" value="ios">
-            <label class="contest__lbl-radio" for="ios">Pink для iOS</label>
+          <li class="app-contest__item">
+            <input class="app-contest__input" type="radio" name="app" id="ios" value="ios">
+            <label class="app-contest__lbl" for="ios">Pink для iOS</label>
           </li>
 
-          <li class="contest__app-item">
-            <input class="contest__input-radio" type="radio" name="app" id="android" value="android">
-            <label class="contest__lbl-radio" for="android">Pink на Android</label>
+          <li class="app-contest__item">
+            <input class="app-contest__input" type="radio" name="app" id="android" value="android">
+            <label class="app-contest__lbl" for="android">Pink на Android</label>
           </li>
 
-          <li class="contest__app-item">
-            <input class="contest__input-radio" type="radio" name="app" id="win" value="win">
-            <label class="contest__lbl-radio" for="win">Windows Phone</label>
+          <li class="app-contest__item">
+            <input class="app-contest__input" type="radio" name="app" id="win" value="win">
+            <label class="app-contest__lbl" for="win">Windows Phone</label>
           </li>
 
         </ul>
@@ -161,10 +161,10 @@
       </fieldset>
 
 
-      <fieldset class="contest__user-text">
+      <fieldset class="contest__usertext usertext-contest">
 
-        <label class="contest__lbl-text" for="user-text">Опишите свои эмоции</label>
-        <textarea class="contest__input-text" name="user-text" id="user-text" rows="5" cols="24">Можно прям в красках, не стесняясь в выражениях
+        <label class="usertext-contest__lbl" for="user-text">Опишите свои эмоции</label>
+        <textarea class="usertext-contest__text" name="user-text" id="user-text" rows="5" cols="24">Можно прям в красках, не стесняясь в выражениях
         </textarea>
 
       </fieldset>
@@ -182,7 +182,7 @@
 
       <div class="contest-popup__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</div>
 
-      <button class="contest__btn">OK</button>
+      <button class="contest-popup__btn">OK</button>
 
     </div>
 
@@ -193,12 +193,35 @@
 
       <div class="contest-popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</div>
 
-      <button class="contest__btn">ЗАКРЫТЬ ОКНО</button>
+      <button class="contest-popup__btn">Закрыть окно</button>
 
     </div>
 
-
   </main>
+
+
+  <footer class="page-footer">
+
+    <a class="logo logo--pict" href="">PINK</a>
+
+    <ul class="socials">
+      <li class="socials__item socials__item--twitter">
+        <a href=""></a>
+      </li>
+      <li class="socials__item socials__item--youtube">
+        <a href=""></a>
+      </li>
+      <li class="socials__item socials__item--facebook">
+        <a href=""></a>
+      </li>
+    </ul>
+
+    <div class="credentials">
+      Разработано
+      <a class="credentials__logo" href=""><img src="http://placehold.it/27x34" alt="htmlacademy"> </a>
+    </div>
+
+  </footer>
 
 </body>
 
