--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo"  href="#">
+        <a class="logo logo--plain"  href="#">
         PINK
         </a>
       </h1>
@@ -33,7 +33,7 @@
     <nav class="main-menu main-menu--closed">
 
       <h1>
-        <a class="logo" href="#">
+        <a class="logo logo--plain" href="#">
           PINK
         </a>
       </h1>
