--- a/form.html
+++ b/form.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo logo--plain"  href="index.html">
+        <a class="logo-plain"  href="index.html">
         PINK
         </a>
       </h1>
@@ -24,7 +24,7 @@
       <ul class="main-menu__items">
         <li class="main-menu__item"><a href="index.html">Главная</a></li>
         <li class="main-menu__item"><a href="photo.html">Фотографии</a></li>
-        <li class="main-menu__item"><a href="form.html">Конкурс</a></li>
+        <li class="main-menu__item"><a>Конкурс</a></li>
         <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
       </ul>
 
@@ -202,7 +202,7 @@
 
   <footer class="page-footer">
 
-    <a class="logo logo--pict" href="">PINK</a>
+    <a class="logo-pict" href="index.html">PINK</a>
 
     <ul class="socials">
       <li class="socials__item socials__item--twitter">
