--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="main-menu main-menu--opened">
 
       <h1>
-        <a class="logo logo--plain"  href="#">
+        <a class="logo-plain"  href="#">
         PINK
         </a>
       </h1>
@@ -22,7 +22,7 @@
       </button>
 
       <ul class="main-menu__items">
-        <li class="main-menu__item"><a href="index.html">Главная</a></li>
+        <li class="main-menu__item"><a>Главная</a></li>
         <li class="main-menu__item"><a href="photo.html">Фотографии</a></li>
         <li class="main-menu__item"><a href="form.html">Конкурс</a></li>
         <li class="main-menu__item"><a href="#">Htmlacademy</a></li>
