Верстка photo.html, главное меню - js

--- a/form.html
+++ b/form.html
@@ -230,7 +230,7 @@
 
   <footer class="page-footer">
 
-    <a class="logo-pict" href="index.html">PINK</a>
+    <a class="page-footer__logo logo-pict" href="index.html">PINK</a>
 
     <ul class="socials">
       <li class="socials__item socials__item--twitter">
@@ -246,10 +246,14 @@
 
     <div class="credentials">
       Разработано
-      <a class="credentials__logo" href=""><img src="http://placehold.it/27x34" alt="htmlacademy"> </a>
+      <a class="credentials__logo" href="">
+        <img src="http://placehold.it/27x34" alt="htmlacademy"> 
+      </a>
     </div>
 
   </footer>
+  
+  <script src="js/main-menu.js"></script>
 
 </body>
 
