--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="page-header">
 
-    <nav class="main-menu main-menu--closed">
+    <nav class="main-menu">
 
       <div class="main-menu__top">
         <div class="main-menu__top-inner">
@@ -232,9 +232,11 @@
     </section>
 
   </footer>
+  
+  <script src="js/main-menu.js"></script>
 
   <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=MMsR6g0CCF-m6xpOlU9ElIa7qg4eUTRG&width=100%&height=240&id=yandex-map&lang=ru_RU&sourceType=constructor&scroll=true"></script>
-
+  
 </body>
 
 </html>
