Исправление photo.html, верстка form.html

--- a/photo.html
+++ b/photo.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="page page-photo">
+<body class="page">
 
   <header class="page-header">
 
@@ -51,28 +51,6 @@
       <h2 class="page-header__title">Фотографии пользователей</h2>
     </div>
 
-    <div class="downloads">
-      <div class="downloads__inner">
-
-        <a class="downloads__btn" href="http://www.apple.com/ru/itunes/">Скачать приложение</a>
-
-        <ul class="downloads__icons">
-          <li class="downloads__icon downloads__icon--apple">
-            <a href="http://www.apple.com/ru/itunes/">Apple</a>
-          </li>
-          <li class="downloads__icon downloads__icon--android">
-            <a href="https://play.google.com/store?hl=ru">Android</a>
-          </li>
-          <li class="downloads__icon downloads__icon--win">
-            <a href="https://www.microsoft.com/en-us/store/apps/windows-phone">Windows</a>
-          </li>
-        </ul>
-
-        <p class="downloads__info">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-
-      </div>
-    </div>
-
   </header>
 
 
@@ -80,13 +58,13 @@
 
     <section class="user-photos">
 
-      <h3 class="page-photo__slogan user-photos__slogan">
+      <h3 class="page__slogan user-photos__slogan">
         Взгляните на фотографии, которые выкладывают пользователи!<br>Видите, как не хватает ваших?
       </h3>
 
-      <article class="user-photos__post user-post user-photos__post--best">
+      <article class="user-photos__post user-post user-post--best">
 
-        <img class="user-post__photo" src="http://placehold.it/280x132" width="280px" height="132px" alt="Фотография пользователя">
+        <img class="user-post__photo" src="http://placehold.it/320x132" width="320" height="132" alt="Фотография пользователя">
 
         <div class="user-post__info">
 
@@ -101,7 +79,7 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__btn-like btn-like">Нравится</button>
+              <button class="user-post__vote-like">Нравится</button>
               <span class="user-post__count-like">Нравится: 334</span>
             </div>
           </footer>
@@ -111,9 +89,9 @@
       </article>
 
 
-      <article class="user-photos__post user-post">
+      <article class="user-photos__post user-post user-post--regular">
 
-        <img class="user-post__photo" src="http://placehold.it/280x132" width="280px" height="132px" alt="Фотография пользователя">
+        <img class="user-post__photo" src="http://placehold.it/280x132" width="280" height="132" alt="Фотография пользователя">
 
         <div class="user-post__info">
 
@@ -128,7 +106,7 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__btn-like btn-like">Нравится</button>
+              <button class="user-post__vote-like">Нравится</button>
               <span class="user-post__count-like">Нравится: 356</span>
             </div>
           </footer>
@@ -138,9 +116,9 @@
       </article>
 
 
-      <article class="user-photos__post user-post">
+      <article class="user-photos__post user-post user-post--regular">
 
-        <img class="user-post__photo" src="http://placehold.it/280x132" width="280px" height="132px" alt="Фотография пользователя">
+        <img class="user-post__photo" src="http://placehold.it/280x132" width="280" height="132" alt="Фотография пользователя">
 
         <div class="user-post__info">
 
@@ -155,7 +133,7 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__btn-like btn-like">Нравится</button>
+              <button class="user-post__vote-like">Нравится</button>
               <span class="user-post__count-like">Нравится: 666</span>
             </div>
           </footer>
@@ -165,9 +143,9 @@
       </article>
 
 
-      <article class="user-photos__post user-post">
+      <article class="user-photos__post user-post user-post--regular">
 
-        <img class="user-post__photo" src="http://placehold.it/280x132" width="280px" height="132px" alt="Фотография пользователя">
+        <img class="user-post__photo" src="http://placehold.it/280x132" width="280" height="132" alt="Фотография пользователя">
 
         <div class="user-post__info">
 
@@ -182,7 +160,7 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__btn-like btn-like">Нравится</button>
+              <button class="user-post__vote-like">Нравится</button>
               <span class="user-post__count-like">Нравится: 215</span>
             </div>
           </footer>
@@ -192,9 +170,9 @@
       </article>
 
 
-      <article class="user-photos__post user-post">
+      <article class="user-photos__post user-post user-post--regular">
 
-        <img class="user-post__photo" src="http://placehold.it/280x132" width="280px" height="132px" alt="Фотография пользователя">
+        <img class="user-post__photo" src="http://placehold.it/280x132" width="280" height="132" alt="Фотография пользователя">
 
         <div class="user-post__info">
 
@@ -209,7 +187,7 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__btn-like btn-like">Нравится</button>
+              <button class="user-post__vote-like">Нравится</button>
               <span class="user-post__count-like">Нравится: 4</span>
             </div>
           </footer>
@@ -219,9 +197,9 @@
       </article>
 
 
-      <article class="user-photos__post user-post">
+      <article class="user-photos__post user-post user-post--regular">
 
-        <img class="user-post__photo" src="http://placehold.it/280x132" width="280px" height="132px" alt="Фотография пользователя">
+        <img class="user-post__photo" src="http://placehold.it/280x132" width="280" height="132" alt="Фотография пользователя">
 
         <div class="user-post__info">
 
@@ -236,7 +214,7 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__btn-like btn-like">Нравится</button>
+              <button class="user-post__vote-like">Нравится</button>
               <span class="user-post__count-like">Нравится: 150</span>
             </div>
           </footer>
@@ -250,12 +228,12 @@
 
     <form class="new-photo">
 
-      <h3 class="page-photo__slogan new-photo__slogan">
+      <h3 class="page__slogan new-photo__slogan">
          Затмите их всех!<br>Выкладывайте все, что накопилось в телефоне!
       </h3>
 
       <div class="new-photo__img">
-        <img src="http://placehold.it/280x374" width="280px" height="374px" alt="Новая фотография">
+        <img src="http://placehold.it/280x374" width="280" height="374" alt="Новая фотография">
       </div>
 
       <div class="new-photo__proc proc-photo">
@@ -270,7 +248,7 @@
 
         <div class="proc-photo__btns">
           <button type="submit" class="proc-photo__btn proc-photo__btn--post">Запостить</button>
-          <button class="proc-photo__btn proc-photo__btn--cancel">Отмена</button>
+          <button type="reset" class="proc-photo__btn proc-photo__btn--cancel">Отмена</button>
         </div>
 
       </div>
@@ -299,7 +277,7 @@
     <div class="page-footer__credentials">
       <span>Разработано</span>
       <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
-        <img src="http://placehold.it/27x34" width="27px" height="34px" alt="Htmlacademy">
+        <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
       </a>
     </div>
 
