--- a/form.html
+++ b/form.html
@@ -231,7 +231,7 @@
     </ul>
 
     <div class="page-footer__credentials">
-      <span>Разработано</span>
+      <span class="page-footer__credentials-text">Разработано</span>
       <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
         <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
       </a>
