--- a/photo.html
+++ b/photo.html
@@ -79,8 +79,8 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__vote-like">Нравится</button>
-              <span class="user-post__count-like">Нравится: 334</span>
+              <button class="user-post__vote-btn">Нравится</button>
+              <span class="user-post__count-btn">Нравится: 334</span>
             </div>
           </footer>
 
@@ -106,8 +106,8 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__vote-like">Нравится</button>
-              <span class="user-post__count-like">Нравится: 356</span>
+              <button class="user-post__vote-btn">Нравится</button>
+              <span class="user-post__count-btn">Нравится: 356</span>
             </div>
           </footer>
 
@@ -133,8 +133,8 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__vote-like">Нравится</button>
-              <span class="user-post__count-like">Нравится: 666</span>
+              <button class="user-post__vote-btn">Нравится</button>
+              <span class="user-post__count-btn">Нравится: 666</span>
             </div>
           </footer>
 
@@ -160,8 +160,8 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__vote-like">Нравится</button>
-              <span class="user-post__count-like">Нравится: 215</span>
+              <button class="user-post__vote-btn">Нравится</button>
+              <span class="user-post__count-btn">Нравится: 215</span>
             </div>
           </footer>
 
@@ -187,8 +187,8 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__vote-like">Нравится</button>
-              <span class="user-post__count-like">Нравится: 4</span>
+              <button class="user-post__vote-btn">Нравится</button>
+              <span class="user-post__count-btn">Нравится: 4</span>
             </div>
           </footer>
 
@@ -214,8 +214,8 @@
 
           <footer class="user-post__footer">
             <div class="user-post__vote">
-              <button class="user-post__vote-like">Нравится</button>
-              <span class="user-post__count-like">Нравится: 150</span>
+              <button class="user-post__vote-btn">Нравится</button>
+              <span class="user-post__count-btn">Нравится: 150</span>
             </div>
           </footer>
 
@@ -275,7 +275,7 @@
     </ul>
 
     <div class="page-footer__credentials">
-      <span>Разработано</span>
+      <span class="page-footer__credentials-text">Разработано</span>
       <a class="page-footer__credentials-logo" href="https://htmlacademy.ru/">
         <img src="http://placehold.it/27x34" width="27" height="34" alt="Htmlacademy">
       </a>
